infrastructure/controllers/vault/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "vault.k8s.home-tm.duckdns.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
